<resources>
    <string name="app_name">Airline</string>
    <string name="airline_manager">Airline Manager</string>
    <string name="readme">Help</string>
    <string name="add_flight">Add Flight</string>
    <string name="display_airline">Display Airline</string>
    <string name="search_airline">Search Airline</string>
    <string name="airline_name">Airline Name</string>
    <string name="flight_number">Flight Number</string>
    <string name="source_airport">Source Airport Code</string>
    <string name="destination_airport">Destination Airport Code</string>
    <string name="arrival_date">Arrival Date: mm/dd/yyyy</string>
    <string name="departure_date">Departure Date: mm/dd/yyyy</string>
    <string name="arrival_time">Arrival Time: hh:mm a</string>
    <string name="departure_time">Departure Time: hh:mm a</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="airline_name2">Airline Name: </string>
    <string name="readmeContent">Name: Tanner Mestas\nAssignment: Assignment #6\n\nAirline Manager -
        Takes you to the page to manage airlines.\n\nAdd Flight - Allows you to add a flight to an
        airline, \ncreates an airline if the one entered is not stored.\n\nDisplay Airline - Displays
        an airline that the user \nspecifies.\n\nSearch Airline - Searches for flights in an airline
        \nbetween the two specified airports.
    </string>
</resources>