<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/cancelSearchAirport"
        android:layout_width="125dp"
        android:layout_height="66dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="514dp"
        android:onClick="onCancelSearch"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextSearchDestination"
        app:layout_constraintTop_toBottomOf="@+id/submitSearchAirport" />

    <EditText
        android:id="@+id/editTextSearchDestination"
        android:layout_width="222dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/destination_airport"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <EditText
        android:id="@+id/editTextSearchSource"
        android:layout_width="223dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/source_airport"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <EditText
        android:id="@+id/editTextSearchAirlineName"
        android:layout_width="222dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="645dp"
        android:ems="10"
        android:hint="@string/airline_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/submitSearchAirport"
        android:layout_width="125dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="55dp"
        android:onClick="onSubmitSearch"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/cancelSearchAirport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextSearchSource"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/searchedAirlineContents"
        android:layout_width="380dp"
        android:layout_height="495dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchDestination" />
</androidx.constraintlayout.widget.ConstraintLayout>